<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_DebugColumnDIO" Id="{f325683f-26b2-4012-baa9-badc30f5f0d1}">
    <Declaration><![CDATA[TYPE ST_DebugColumnDIO :
STRUCT
//<DIO>
	ipDBColumnPCWLeakage				AT %I* :BOOL; //debugcart3 new io
	ipDBColumnPCWLeakage2				AT %I* :BOOL; //debugcart3 new io
	ipDBColumnPCWSupplyLeakage    		AT %I* :BOOL;
	ipDBColumnPCWReturnLeakage    		AT %I* :BOOL;
	
	opDBColumnHotAirExhaustFan 			AT %Q* :BOOL;
	opDBColumnPCWValve         			AT %Q* :BOOL;
	opDBColumnTstAirSol        			AT %Q* :BOOL;
	opDBColumnAPAirSol         			AT %Q* :BOOL;
//</DIO>

//<EAP>
	eapDBColumnPCWLeakage				AT %Q* :BOOL;
	eapDBColumnPCWSupplyLeakage    		AT %Q* :BOOL;
	eapDBColumnPCWReturnLeakage    		AT %Q* :BOOL;
	eapShutOffAllACPower				AT %Q* :BOOL;
//</EAP>

//<AIO>
	ipAnlgDBColumnPCWRegularFlowSensor	  AT %I* : INT;
	ipAnlgDBColumnPCWSupplyPressure       AT %I* : INT;
	ipAnlgDBColumnPCWReturnPressure       AT %I* : INT;
	ipAnlgDBColumnTstAirPressure          AT %I* : INT;
	ipAnlgDBColumnAPAirPressure           AT %I* : INT;
	ipAnlgDBColumnDewPointSensor          AT %I* : INT;
	ipAnlgDBColumnTempSensor			  AT %I* : INT;
	ipAnlgDBColumnPCWSupplyTemperature    AT %I* : INT;
	ipAnlgDBColumnPCWReturnTemperature    AT %I* : INT;
//</AIO>

//<CVTIO>
	ipDBColumnPCWRegularFlowSensor		:REAL;
	ipDBColumnPCWSupplyPressure       	:REAL;
	ipDBColumnPCWReturnPressure       	:REAL;
	ipDBColumnTstAirPressure          	:REAL;
	ipDBColumnAPAirPressure           	:REAL;
	ipDBColumnDewPointSensor          	:REAL;
	ipDBColumnTempSensor			    :REAL;          
	ipDBColumnPCWSupplyTemperature    	:REAL;
	ipDBColumnPCWReturnTemperature    	:REAL;
//</CVTIO>

//<SIMIO>
	simDBColumnPCWRegularFlowSensor		:REAL;
	simDBColumnPCWSupplyPressure       	:REAL;
	simDBColumnPCWReturnPressure       	:REAL;
	simDBColumnTstAirPressure          	:REAL;
	simDBColumnAPAirPressure           	:REAL;
	simDBColumnDewPointSensor          	:REAL;
	simDBColumnTempSensor			    :REAL;
	simDBColumnPCWSupplyTemperature    	:REAL;
	simDBColumnPCWReturnTemperature    	:REAL;
	
	fbSimDBColumnPCWRegularFlowSensor		:FB_AnlgSIM;
	fbSimDBColumnPCWSupplyPressure       	:FB_AnlgSIM;
	fbSimDBColumnPCWReturnPressure       	:FB_AnlgSIM;
	fbSimDBColumnTstAirPressure          	:FB_AnlgSIM;
	fbSimDBColumnAPAirPressure           	:FB_AnlgSIM;
	fbSimDBColumnDewPointSensor          	:FB_AnlgSIM;
	fbSimDBColumnTempSensor			    	:FB_AnlgSIM;
	fbSimDBColumnPCWSupplyTemperature    	:FB_AnlgSIM;
	fbSimDBColumnPCWReturnTemperature    	:FB_AnlgSIM;
//</SIMIO>
	

END_STRUCT
END_TYPE

(*
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnPCWLeakage				
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnPCWSupplyLeakage    	
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnPCWReturnLeakage    	
                                        
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnPCWRegularFlowSensor	
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnPCWSupplyPressure       
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnPCWReturnPressure       
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnTstAirPressure          
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnAPAirPressure           
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnDewPointSensor          
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnPCWSupplyTemperature    
GVL_TC.fbDebugColumn.stDebugColumnDIO.ipDBColumnPCWReturnTemperature    
                                        
GVL_TC.fbDebugColumn.stDebugColumnDIO.opDBColumnHotAirExhaustFan 		
GVL_TC.fbDebugColumn.stDebugColumnDIO.opDBColumnPCWValve         		
GVL_TC.fbDebugColumn.stDebugColumnDIO.opDBColumnTstAirSol        		
GVL_TC.fbDebugColumn.stDebugColumnDIO.opDBColumnAPAirSol         		
*)]]></Declaration>
  </DUT>
</TcPlcObject>